# Wordle-Utility

./: .gitignore  CMakeLists.txt  Controller.cpp  Makefile  README.md  WordleSolver.cpp  WordleSolver.h  main.cpp  new_words.txt  words.txt
include/: WordleSolver.h
include/controllers/: GameController.hpp
include/models/: BasicWordProvider.hpp  EditDistanceWordle.hpp  IWordProvider.hpp  RandomWordProvider.hpp  WordleSolver.hpp
include/models/games/: AbstractWordleGame.hpp  EditDistanceWordleGame.hpp  IWordleGame.hpp  WordleGame.hpp
include/models/solvers/: EditDistanceWordleSolver.hpp  IWordleSolver.hpp  WordleSolver.hpp
include/structures/: LevenshteinTree.hpp  PrefixTree.hpp  PrefixTreeNode.hpp  SuffixTree.hpp
include/utilities/: FileReader.hpp
include/views/: AbstractGameView.hpp  EditDistanceWordleGameView.hpp  TextModifiers.hpp  WordleGameView.hpp
resources/: Makefile  filter_words_by_length.py  find_words.py
src/: Controller.cpp  WordleSolver.cpp  parse.cpp
src/controllers/: Controller.cpp  GameController.tpp
src/drivers/: main.cpp  main2.cpp
src/models/: BasicWordProvider.cpp  EditDistanceWordle.cpp  EditDistanceWordleSolver.cpp  RandomWordProvider.cpp  WordleSolver.cpp
src/models/games/: AbstractWordleGame.cpp  AbstractWordleGame.tpp  EditDistanceWordleGame.cpp  WordleGame.cpp
src/structures/: LevenshteinTree.cpp  PrefixTree.cpp  PrefixTreeNode.cpp  SuffixTree.cpp
src/utilities/: FileReader.cpp
src/views/: AbstractGameView.tpp  EditDistanceWordleGameView.cpp  WordleGameView.cpp
word_lists/: EDwordle-words.txt  possible-answers.txt
(+2 files in other folders)
